Fix navbar bug with image line-wrapping.

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -3,6 +3,13 @@
 
 @selectedMascotsColumns: 2;
 
+nav.navbar {
+  .navbar-brand img {
+    display: inline;
+    padding: 1px;
+  }
+}
+
 .selections {
   .make-row();
 
